--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="RU_ru">
 
 <head>
   <meta charset="utf-8">
+  <title>Чу</title>
   <script defer async src='popup.js'></script>
   <link rel="stylesheet" href="style.css" >
   <link rel="preconnect" href="https://fonts.googleapis.com">
