--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
   <meta charset="utf-8">
   <title>Чу</title>
   <script defer async src='popup.js'></script>
-  <link rel="stylesheet" href="style.css" >
+  <!-- <link rel="stylesheet" href="style.css" > -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-  <h3>Тренажер</h3>
-  <input placeholder="проценты" type="number" id="prc" />
-  <input placeholder="оценка" type="number" id="oc" />
-  <button id="gbtn">поменять</button>
-  
+  <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg items-center">
+    <h3 class="text-xl font-medium text-black text-center mb-5">Тренажер</h3>
+    <div class="flex flex-col">
+      <input  class="caret-pink-500 mb-5" placeholder="Проценты" type="number" id="prc" />
+      <input  class="caret-pink-500 mb-5" placeholder="Оценка" type="number" id="oc" />
+      <button class="hover:bg-rose-300 bg-rose-500 max-w-md font-mono text-white rounded-xl shadow-lg" id="gbtn">Поменять</button>
+    </div>
+  </div>
+
 </body>
 
 </html>
