--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="tailwindcss-3.2.4.js"></script>
 </head>
 
 <body>
-  <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg items-center">
+  <div class="p-6 max-w-sm bg-white rounded-xl shadow-lg items-center">
     <h3 class="text-xl font-medium text-black text-center mb-5">Тренажер</h3>
     <div class="flex flex-col">
       <input  class="caret-pink-500 mb-5" placeholder="Проценты" type="number" id="prc" />
