--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Чу</title>
-  <script defer async src='popup.js'></script>
-  <!-- <link rel="stylesheet" href="style.css" > -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <script src="tailwindcss-3.2.4.js"></script>
+  <script defer src='popup.js'></script>
 </head>
 
 <body>
@@ -18,7 +16,7 @@
     <div class="flex flex-col">
       <input  class="caret-pink-500 mb-5" placeholder="Проценты" type="number" id="prc" />
       <input  class="caret-pink-500 mb-5" placeholder="Оценка" type="number" id="oc" />
-      <button class="hover:bg-rose-300 bg-rose-500 max-w-md font-mono text-white rounded-xl shadow-lg" id="gbtn">Поменять</button>
+      <button class="hover:bg-rose-300 bg-rose-500 max-w-md font-mono text-white rounded-xl shadow-lg" id="gbtn" >Поменять</button>
     </div>
   </div>
 
