--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="RU_ru">
 
 <head>
+  <title>1</title>
   <meta charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
